<resources>
    <string name="app_name">OOP_Course_Project</string>
    <string name="action_settings" translatable="false">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="profit_miner" translatable="false">Прибыль Майнера</string>
    <string name="hash_rate_prompt" translatable="false">Введите хешрейт TH:</string>
    <string name="electricity_cost_prompt" translatable="false">Введите цену электроэнергии RUB/kWH:</string>
    <string name="electricity_consumption_prompt" translatable="false">Введите потребление вашей системы W:</string>
    <string name="btc_to_rub_prompt" translatable="false">Введите курс биткоина RUB:</string>
    <string name="calculate_button" translatable="false">Посчитать</string>
    <string name="your_income" translatable="false">Ваш доход*:</string>
    <string name="system_assembly" translatable="false">Собрать систему</string>
    <string name="other_info" translatable="false">*Приложение даёт приблизительную информацию и не является достоверным источником. Для более точной оценки требуется обработка большого количества данных.</string>

    <string name="hashrate_info">Сборка системы</string>
    <string name="miners_from_db">Майнеры из БД:</string>
    <string name="miner_quantity">Количество майнеров:</string>
    <string name="add_button">Добавить</string>
    <string name="clear_button">Стереть</string>
    <string name="miner">Майнер</string>
    <string name="quantity">Кол-во</string>
    <string name="power_consumption">По-ние (W)</string>
    <string name="hashrate">Хешрейт (TH)</string>
    <string name="total_hashrate">Общий хешрейт: 0 TH</string>
    <string name="total_power_consumption">Общее потребление энергии: 0 Вт</string>
    <string name="edit_database">Редактирование БД</string>
    <string name="button_back">Назад</string>

    <string name="edit_db_title">Редактирование БД</string>
    <string name="miner_name_prompt">Название* майнера:</string>
    <string name="hashrate_prompt">Хэшрейт (TH):</string>
    <string name="power_consumption_prompt">Потребление энергии (Вт):</string>
    <string name="save_button">Сохранить</string>
    <string name="delete_prompt">Выберите майнер из БД для удаления:</string>
    <string name="delete_button">Удалить майнер</string>
</resources>