<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/hashrateInfoTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/hashrate_info"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#673AB7"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/miners_from_db"
        android:textSize="18dp" />

    <Spinner
        android:id="@+id/minerSpinner"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:padding="12dp"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/miner_quantity"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/minerQuantity"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:inputType="number"
        android:padding="12dp"
        android:text="1" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_button" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_button" />

    <TableLayout
        android:id="@+id/minerTableAlt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <!-- Заголовки таблицы -->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/miner"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:gravity="end"
                android:text="@string/quantity"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:gravity="end"
                android:text="@string/power_consumption"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hashrate"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TableLayout
            android:id="@+id/minerTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1" />
    </ScrollView>

    <TextView
        android:id="@+id/totalHashrateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/total_hashrate"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/totalPowerConsumptionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/total_power_consumption"
        android:textSize="18dp" />

    <Button
        android:id="@+id/editingMinerDataBaseBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_database" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_back" />
</LinearLayout>
