<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/addNewMinerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/edit_db_title"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#673AB7"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/miner_name_prompt"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/minerNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hashrate_prompt"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/hashrateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint=""
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/power_consumption_prompt"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/powerConsumptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint=""
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/delete_prompt"
        android:textSize="18dp" />

    <Spinner
        android:id="@+id/minerSpinner"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:padding="12dp"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_button"/>

    <Button
        android:id="@+id/backBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/button_back" />

    <TextView
        android:id="@+id/otherInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/other_info"
        android:textAlignment="center"
        android:textColorLink="#4B000000"
        android:textSize="12sp" />
</LinearLayout>
