<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".MainActivity"
    tools:visibility="visible">

    <TextView
        android:id="@+id/programNameTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/profit_miner"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#673AB7"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/hashRateTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/hash_rate_prompt"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/hashRateET"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text=""
        android:textAlignment="viewStart"
        android:visibility="visible" />

    <TextView
        android:id="@+id/electricityCostTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/electricity_cost_prompt"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/electricityCostET"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="0" />

    <TextView
        android:id="@+id/electricityConsumptionTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/electricity_consumption_prompt"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/electricityConsumptionET"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="" />

    <TextView
        android:id="@+id/btcToRubTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/btc_to_rub_prompt"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/btcToRubET"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="5882684.03" />

    <Button
        android:id="@+id/resultCalculateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/calculate_button" />

    <TextView
        android:id="@+id/ResultIncome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/your_income"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/resultIncomeOnDayTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/resultIncomeOnWeekTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/resultIncomeOnMouthTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/hashRateCalculateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="8dp"
        android:text="@string/system_assembly"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/otherInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/other_info"
        android:textAlignment="center"
        android:textColorLink="#4B000000"
        android:textSize="12sp" />

</LinearLayout>